add the support of selecting which credential to use;
