# rmapp/static/swagger/swagger.yaml
@@ -696,6 +696,12 @@ definitions:
       uuid:
         type: string
         description: Internal UUID given to the cluster
+      hints:
+        type: string
+        description: hints that will be used to select the infrastructure that will host cluster's nodes
+      credential:
+        type: string
+        description: hints that will be used to select the infrastructure that will host cluster's nodes
       public_key:
         type: string
         description: Public key used to identify nodes of the cluster
@@ -864,11 +870,15 @@ definitions:
     required:
       - site_name
       - user
+      - name
       - credentials
     properties:
       site_name:
         type: string
         description: Name of the site
+      name:
+        type: string
+        description: Name of the credential
       user:
         type: integer
         description: ID of the user
@@ -879,11 +889,15 @@ definitions:
     type: object
     required:
       - site_name
+      - name
       - credentials
     properties:
       site_name:
         type: string
         description: Name of the site
+      name:
+        type: string
+        description: Name of the credential
       credentials:
         type: string
         description: Encrypted credentials (JSON format encrypted)
@@ -893,6 +907,9 @@ definitions:
       site_name:
         type: string
         description: Name of the site
+      name:
+        type: string
+        description: Name of the credential
       credentials:
         type: string
         description: Encrypted credentials (JSON format encrypted)
